# wind_bot

./: .gitignore  Dockerfile  README.md  app.py  celery_app.py  celerybeat-schedule  config.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  pytest.ini  run_bot.py  start.py  tasks.py
.cursor/rules/: main.mdc
application/interfaces/: alert_state_repository.py  notification_service.py  stats_repository.py  weather_log_repository.py
application/use_cases/: add_weather_log.py  generate_weather_report.py  get_statistics.py  message_formatting.py  process_scheduled_weather_check.py  process_telegram_command.py  process_telegram_message.py  unit_conversion.py  update_bot_stats.py  weather_utils.py
application/utils/: __init__.py  message_formatting.py  unit_conversion.py  weather_utils.py
domain/models/: messaging.py  weather.py
infrastructure/: __init__.py
infrastructure/llm/: langchain_service.py  tools.py
infrastructure/notifications/: telegram_sender.py
infrastructure/persistence/: database.py  init_db.py  models.py  redis_alert_state_repository.py  sql_stats_repository.py  sql_weather_log_repository.py
infrastructure/weather/: openweather_service.py
instance/: wind_bot.db
interfaces/telegram/: bot_controller.py
interfaces/web/: app.py  models.py  schemas.py
static/css/: styles.css
static/js/: script.js
templates/: index.html  layout.html  stats.html
tests/: __init__.py  conftest.py  test_bot.py  test_tasks.py  test_utils.py  test_weather.py
