[project]
name = "wind-bot"
version = "0.1.0"
description = "Telegram bot for kitesufing chats"
requires-python = "~=3.11"
dependencies = [
    "celery>=5.5.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain>=0.3.23",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "openai>=1.70.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "python-telegram-bot[all]==20.7",
    "pytz>=2025.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--base-url http://0.0.0.0:5000"
